--- a/modele_NCF.ipynb
+++ b/modele_NCF.ipynb
@@ -159,24 +159,24 @@
     "tags['tag'] = tags['tag'].fillna('')\n",
     "\n",
     "#concatener les tags\n",
-    "movies_with_links = pd.merge(movies, links, on='movieId', how='left')  #merge le dasaset movies et links\n",
+    "movies_avec_links = pd.merge(movies, links, on='movieId', how='left')  #merge le dasaset movies et links\n",
     "movie_tags = tags.groupby('movieId')['tag'].apply(lambda x: ' '.join(x)).reset_index() #groupby le dataset tags par movieId et concatener les tags\n",
     "\n",
     "# merger les dataframes movies_with_links et movie_tags\n",
-    "movies_with_ratings = pd.merge(movies_with_links, ratings, on='movieId', how='left') #merge le dataset movies_with_links et ratings\n",
+    "movies_with_ratings = pd.merge(movies_avec_links, ratings, on='movieId', how='left') #merge le dataset movies_with_links et ratings\n",
     "\n",
     "# Calculer la moyenne des ratings\n",
     "mean_ratings = movies_with_ratings.groupby('movieId')['rating'].mean().reset_index() #groupby le dataset movies_with_ratings par movieId et calculer la moyenne des ratings\n",
     "\n",
     "# merger les dataframes\n",
-    "data = pd.merge(movies_with_links, movie_tags, on='movieId', how='left')\n",
+    "data = pd.merge(movies_avec_links, movie_tags, on='movieId', how='left')\n",
     "data = pd.merge(data, mean_ratings, on='movieId', how='left')\n",
     "\n",
     "#ajouter une colone user_id\n",
     "data['userId'] = np.random.randint(1, 86537, data.shape[0])\n",
     "\n",
     "#ajouter une colonne popularity\n",
-    "data['popularity'] = data['rating'].groupby(data['movieId']).transform('count')\n",
+    "data['populaire'] = data['rating'].groupby(data['movieId']).transform('count')\n",
     "\n",
     "data.head()"
    ]
@@ -415,7 +415,7 @@
     "movie_input = Input(shape=(1,)) #créer une couche d'entrée pour les movieId\n",
     "\n",
     "user_embedding = Embedding(len(user_id_mapping), 32)(user_input) #créer une couche d'embedding pour les userId avec 32 neurones\n",
-    "movie_embedding = Embedding(len(movie_id_mapping), 32)(movie_input) #créer une couche d'embedding pour les movieId avec 32 neurones\n",
+    "movie_embedding = Embedding(len(movie_id_mapping), 32)(movie_input) #créer une couche d'embedding pour les movieId \n",
     "\n",
     "user_flatten = Flatten()(user_embedding) #applatir la couche d'embedding des userId\n",
     "movie_flatten = Flatten()(movie_embedding) #applatir la couche d'embedding des movieId\n",
@@ -488,8 +488,8 @@
     "    predictions = scaler.inverse_transform(predictions)\n",
     "\n",
     "    # Trier les résultats\n",
-    "    sorted_indices = np.argsort(predictions.flatten())[::-1]\n",
-    "    top_5 = sorted_indices[:5]\n",
+    "    indices = np.argsort(predictions.flatten())[::-1]\n",
+    "    top_5 = indices[:5]\n",
     "    top_5_movies = movie_array[top_5]\n",
     "    top_5_ratings = predictions.flatten()[top_5]\n",
     "\n",
@@ -507,9 +507,7 @@
     "# Mapper les `movieId` recommandés aux titres\n",
     "nom_movies = movies_df[movies_df['movieId'].isin(top_5_movies)]['title'].values\n",
     "\n",
-    "# Check if any titles were found\n",
-    "if len(nom_movies) == 0:\n",
-    "    nom_movies = [\"No matching titles found\"]\n",
+    "\n",
     "\n",
     "# Afficher les résultats\n",
     "print(\"Top 5 Movies (IDs):\", top_5_movies)\n",
